@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
-Build-Depends: debhelper (>= 4.1.0), bzip2, freebsd6-buildutils (>=  6.2) [kfreebsd-i386 kfreebsd-amd64] | freebsd@major@-buildutils [kfreebsd-i386 kfreebsd-amd64] , libdb4.4-dev | libdb-dev, flex-old | flex, libbsd-dev [kfreebsd-i386 kfreebsd-amd64], gcc-4.2 [kfreebsd-i386 kfreebsd-amd64], sharutils
+Build-Depends: debhelper (>= 4.1.0), bzip2, quilt, freebsd6-buildutils (>=  6.2) [kfreebsd-i386 kfreebsd-amd64] | freebsd@major@-buildutils [kfreebsd-i386 kfreebsd-amd64] , libdb4.4-dev | libdb-dev, flex-old | flex, libbsd-dev [kfreebsd-i386 kfreebsd-amd64], gcc-4.2 [kfreebsd-i386 kfreebsd-amd64], sharutils
 Standards-Version: 3.7.2
 
 Package: kfreebsd-source-@version@
