@@ -1,0 +1,22 @@
+001_misc.diff -p0
+003_glibc_dev_aicasm.diff -p0
+004_xargs.diff -p0
+005_binutils.diff -p0
+007_clone_signals.diff -p0
+008_config.diff -p0
+009_disable_duped_modules.diff -p0
+010_ET_DYN.diff -p0
+013_ip_packed.diff -p0
+017_oss_compat.diff -p0
+018_genassym_MAXCPU.diff -p0
+902_version.diff -p0
+903_disable_non-free_drivers.diff -p0
+904_dev_full.diff -p0
+906_grow_sysv_ipc_limits.diff -p0
+907_cpu_class.diff -p0
+908_linprocfs_is_not_proc.diff -p0
+910_GENERIC_hints.diff -p0
+911_no_werror.diff -p0
+912_binutils.diff -p0
+913_uudecode.diff -p0
+999_config.diff -p0
