@@ -71,11 +71,7 @@ src-stamp:
 		-e 's,#\( \|\t\)*include\( \|\t\)*\(<\|"\)pflog.h\(>\|"\),,g' \
 	; done)
 	
-	set -e ; for i in $(CURDIR)/debian/patches/*.diff ; do \
-		echo "--- Patch $$i ---" ; \
-		patch -p0 -d src/ --dry-run < $$i ; \
-		patch -p0 -d src/ < $$i >/dev/null ; \
-	done
+	set -e ; cd $(CURDIR)/src ; QUILT_PATCHES=$(CURDIR)/debian/patches quilt push -a ; cd $(CURDIR)
 
 	touch src-stamp
 
