@@ -3,7 +3,8 @@ kfreebsd-7 (7.0~cvs200711xx-1) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * New upstream snapshot of RELENG_7
      - refresh of some patches
-  * reorder freebsd6-buildutils and freebsd7-buildutils in Build-Depends
+  * Reorder freebsd6-buildutils and freebsd7-buildutils in Build-Depends
+  * Add build-dependency on quilt, and use quilt in debian/rules
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 23 Oct 2007 17:20:02 +0200
 
